Change toList method to collect (leads to compilation bug)